[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/temp_player.png" type="Texture" id=2]
[ext_resource path="res://src/states.gd" type="Script" id=3]
[ext_resource path="res://src/Player/states/Idle.gd" type="Script" id=4]
[ext_resource path="res://src/Player/states/Walk.gd" type="Script" id=5]
[ext_resource path="res://src/Player/states/Run.gd" type="Script" id=6]
[ext_resource path="res://src/_personal/RinatSatyl/Player/states/Kick.gd" type="Script" id=7]
[ext_resource path="res://src/_personal/RinatSatyl/Player/attackEffect.png" type="Texture" id=8]
[ext_resource path="res://src/_personal/RinatSatyl/Player/kickArea.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.74371, 10.1654 )

[sub_resource type="GDScript" id=4]
script/source = "extends Node

func _process(delta):
	for i in get_children():
		if i.get_node(\"CollisionShape2D\").disabled == false:
			get_parent().get_node(\"attackEffect\").position = i.get_node(\"CollisionShape2D\").get_position()"

[sub_resource type="CircleShape2D" id=2]
radius = 7.90044

[sub_resource type="CircleShape2D" id=3]
radius = 77.2722

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.27739, 4.16084 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="States" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Kick" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="AttacksBlock" type="Node2D" parent="."]

[node name="attackEffect" type="Sprite" parent="AttacksBlock"]
position = Vector2( -0.0788879, -8.59896 )
scale = Vector2( 0.164263, 0.164263 )
texture = ExtResource( 8 )

[node name="kick" type="Node2D" parent="AttacksBlock"]
script = SubResource( 4 )

[node name="up" type="Area2D" parent="AttacksBlock/kick"]
editor/display_folded = true
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttacksBlock/kick/up"]
position = Vector2( 0, -8.58555 )
shape = SubResource( 2 )
disabled = true

[node name="down" type="Area2D" parent="AttacksBlock/kick"]
editor/display_folded = true
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttacksBlock/kick/down"]
position = Vector2( -0.225937, 16.0414 )
shape = SubResource( 2 )
disabled = true

[node name="left" type="Area2D" parent="AttacksBlock/kick"]
editor/display_folded = true
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttacksBlock/kick/left"]
position = Vector2( -10.8449, 4.74465 )
shape = SubResource( 2 )
disabled = true

[node name="right" type="Area2D" parent="AttacksBlock/kick"]
editor/display_folded = true
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttacksBlock/kick/right"]
position = Vector2( 11.5227, 4.97058 )
shape = SubResource( 2 )
disabled = true

[node name="arealStun" type="Node2D" parent="AttacksBlock"]
editor/display_folded = true

[node name="area" type="Area2D" parent="AttacksBlock/arealStun"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttacksBlock/arealStun/area"]
position = Vector2( -0.250343, 6.00826 )
shape = SubResource( 3 )
disabled = true

[node name="Debug" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Debug"]
margin_left = -19.4055
margin_top = -11.7132
margin_right = 20.5945
margin_bottom = 2.28675
align = 1
valign = 1

[node name="Label2" type="Label" parent="Debug"]
margin_left = -20.0202
margin_top = -27.0811
margin_right = 19.9798
margin_bottom = -13.0811
align = 1
valign = 1
[connection signal="state_changed" from="States" to="." method="_on_states_state_changed"]
[connection signal="body_entered" from="AttacksBlock/kick/up" to="AttacksBlock/kick/up" method="_on_up_body_entered"]
[connection signal="body_entered" from="AttacksBlock/kick/down" to="AttacksBlock/kick/down" method="_on_down_body_entered"]
[connection signal="body_entered" from="AttacksBlock/kick/left" to="AttacksBlock/kick/left" method="_on_left_body_entered"]
[connection signal="body_entered" from="AttacksBlock/kick/right" to="AttacksBlock/kick/right" method="_on_right_body_entered"]
